org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/BadScopeWithOnlyTwoSingleDot.alf.xt
//This test is failing.  The errors generated by the original junit test are errors the ones not start with "The feature"" or "The required feature" error messages
/* 
XPECT_SETUP org.omg.sysml.xpect.tests.validation.SysMLValidationTest
	ResourceSet {
		ThisFile {}
		File {from ="/library/Base.alf"}
	}
	Workspace {
		JavaProject {
			SrcFolder {
				ThisFile {}
				File {from ="/library/Base.alf"}
			}
		}
	}
END_SETUP 
*/

package test{
	class non{}
	class A{
		// XPECT errors ---> "Couldn't resolve reference to Feature 'non'." at "non"
		feature aa is non;
		feature a: A;
	}
	class B{
		//the order of error and filenames are different on each test.  The original junit test case does not generate the first 9 errors.
		/* XPECT errors ---
		   	"The feature 'relatedElement' of 'org.omg.sysml.lang.sysml.impl.FeatureMembershipImpl@290d10ef{file:/C:/<install_dir>/org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/BadScopeWithOnlyTwoSingleDot.alf.xt#//@ownedMembership.2/@ownedMemberElement/@ownedMembership.2}' with 1 values must have at least 2 values" at "A::"
			"The feature 'relatedElement' of 'org.omg.sysml.lang.sysml.impl.FeatureMembershipImpl@7899de11{file:/C:/<install_dir>/org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/BadScopeWithOnlyTwoSingleDot.alf.xt#//@ownedMembership.2/@ownedMemberElement/@ownedMembership.1}' with 1 values must have at least 2 values" at ""
			"The feature 'relatedElement' of 'org.omg.sysml.lang.sysml.impl.FeatureTypingImpl@5c534b5b{file:/C:/<install_dir>/org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/BadScopeWithOnlyTwoSingleDot.alf.xt#//@ownedMembership.2/@ownedMemberElement/@ownedMembership.0/@ownedMemberFeature/@ownedRelationship.0}' with 1 values must have at least 2 values" at ""
			"The required feature 'general' of 'org.omg.sysml.lang.sysml.impl.FeatureTypingImpl@5c534b5b{file:/C:/<install_dir>/org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/BadScopeWithOnlyTwoSingleDot.alf.xt#//@ownedMembership.2/@ownedMemberElement/@ownedMembership.0/@ownedMemberFeature/@ownedRelationship.0}' must be set" at ""
			"The required feature 'memberElement' of 'org.omg.sysml.lang.sysml.impl.FeatureMembershipImpl@290d10ef{file:/C:/<install_dir>/org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/BadScopeWithOnlyTwoSingleDot.alf.xt#//@ownedMembership.2/@ownedMemberElement/@ownedMembership.2}' must be set" at "A::"
			"The required feature 'memberElement' of 'org.omg.sysml.lang.sysml.impl.FeatureMembershipImpl@7899de11{file:/C:/<install_dir>/org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/BadScopeWithOnlyTwoSingleDot.alf.xt#//@ownedMembership.2/@ownedMemberElement/@ownedMembership.1}' must be set" at ""
			"The required feature 'memberFeature' of 'org.omg.sysml.lang.sysml.impl.FeatureMembershipImpl@290d10ef{file:/C:/<install_dir>/org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/BadScopeWithOnlyTwoSingleDot.alf.xt#//@ownedMembership.2/@ownedMemberElement/@ownedMembership.2}' must be set" at "A::"
			"The required feature 'memberFeature' of 'org.omg.sysml.lang.sysml.impl.FeatureMembershipImpl@7899de11{file:/C:/<install_dir>/org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/BadScopeWithOnlyTwoSingleDot.alf.xt#//@ownedMembership.2/@ownedMemberElement/@ownedMembership.1}' must be set" at ""
			"The required feature 'type' of 'org.omg.sysml.lang.sysml.impl.FeatureTypingImpl@5c534b5b{file:/C:/<install_dir>/org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/BadScopeWithOnlyTwoSingleDot.alf.xt#//@ownedMembership.2/@ownedMemberElement/@ownedMembership.0/@ownedMemberFeature/@ownedRelationship.0}' must be set" at ""
			"no viable alternative at input 'A'" at "A"
			"no viable alternative at input 'test'" at "test"
		--- */
		feature b: test..A::a;
	}
}

